istio/04-kubernetes-api-mtls/public-via-ingress/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  labels:
    app: gateways
    release: istio
    squad: "foundation"
    tribe: "system"
  name: k8s-cluster-sgp-ardikabs-com-gw
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "k8s.cluster.sgp.ardikabs.com"
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: k8s-cluster-sgp-ardikabs-com-mtls-cert
        mode: MUTUAL
        subjectAltNames:
          - "k8s-cluster-sgp.proxy.svc.cluster.local"
