istio/04-kubernetes-api-mtls/public-via-ingress/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kubernetes-api-dr
  namespace: istio-system
  labels:
    squad: "foundation"
    tribe: "system"
spec:
  host: kubernetes.default.svc.cluster.local
  subsets:
    - name: tls-origination
      trafficPolicy:
        tls:
          mode: SIMPLE
          insecureSkipVerify: true
  exportTo:
    - "."
